kube-config/purple_lessons/kubectl_old/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: short-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      components: backend
  template:
    metadata:
      labels:
        components: backend
    spec:
      containers:
        - name: short-api
          image: antonlarichev/short-api:v1.0
          imagePullPolicy: Always
          resources:
            limits:
              memory: "500Mi"
              cpu: "150m"
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: test
              mountPath: /etc/test
              readOnly: true
          startupProbe:
            httpGet:
              path: /api
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 100  # 10 минут = 60 × 10 сек

          livenessProbe:
            httpGet:
              path: /api
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 15
            timeoutSeconds: 2
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /api
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
      volumes:
        - name: test
          configMap:
            name: demo-config
#DATABASE_URL
# postgresql://nikita:89197791836Aa!@postgres-clusterip:5432/demo
