kube-config/purple_lessons/kubectl_old/pgadmin-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
spec:
  selector:
    matchLabels:
      app: pgadmin
  replicas: 1
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
        - name: pgadmin4
          image: dpage/pgadmin4:9.1
          ports:
            - containerPort: 80
              name: pgadminport
          resources:
            requests:
              memory: "256Mi"
              cpu: "150m"
            limits:
              memory: "512Mi"
              cpu: "300m"
          volumeMounts:
            - name: pgadmin-sessions
              mountPath: /var/lib/pgadmin/sessions  # Монтируем PVC для сессий
      volumes:
        - name: pgadmin-sessions
          persistentVolumeClaim:
            claimName: pgadmin-pvc  # Имя PVC, который будет использоваться для хранения сессий
