kube-config/purple_lessons/kubectl_old/api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: short-api-clusterip
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    components: backend
